# Orbiter

./: .gitignore  LICENSE  README.md
cad/: LICENSE  README.md  render_screenshots.py
cad/assembly/: Orbiter.mtl
cad/parts/: AxisFrame.stl  Hall_Sensor_Mount.stl  OrbitFrame.stl  TableSupportFrame.stl
colmap/: .dockerignore  Dockerfile  README.md  run_colmap_session.sh  sfm_priors_to_colmap.py
docker/: .env.example  .gitignore  README.md  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  ASSEMBLY.md  COLMAP.md  FIRMWARE.md  HARDWARE.md  LICENSE
firmware/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  enc_as5600.c  enc_as5600.h  encoder.c  encoder.h  http_handlers.c  http_handlers.h  idf_component.yml  log_bus.c  log_bus.h  motion.c  motion.h  motion_runner.c  motion_runner.h  orbiter_main.c  stepper.c  stepper.h
server/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
server/orbiter_server/: __init__.py  app.py  calibration.py  camera_adapter.py  camera_io.py  camera_stream.py  commands.py  config.py  conftest.py  discovery.py  esp_proxy.py  models.py  orbiter_model.py  phone_sensor.py  scan_task.py  scene_graph.py  sfm_export.py  storage.py  test_calibration_geom.py  ws_hub.py
server/orbiter_server/geom/: __init__.py  angles.py  machine_model.py  pose.py  rig.py  rig_model.py  scan_path.py  transforms.py
server/orbiter_server/routes/: captures.py  photos.py  scans.py  stream.py  ws.py
ui/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/public/: Orbiter.fbx  Orbiter.glb
ui/src/: main.tsx  styles.css
ui/src/lib/: utils.ts
(+31 files in other folders)
